2014-02-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspOsDataTraffic): Provide values
	for incoming traffic on edges.

2014-02-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspOsData): Created.
	(GdbServer::rspOsDataProcesses): Tidy up trace message, no space
	after commas in list of cores, print cores as 4 char octal.
	* src/GdbServer.h: Add osInforeply and rspOsData.

2014-02-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* Debug/src/subdir.mk: Bring files into line with Release version.

2014-02-13  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspOsDataTraffic): Updated format
	of output.

2014-02-13  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspOsDataLoad):
	Update to new format,  only print debug if offset is zero.
	(GdbServer::rspOsDataTraffic): Likewise.

2014-02-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspTransfer): Add
	support for "load" and "traffic" values for annex.
	(GdbServer::rspOsDataProcesses): Simplify implemenation and use
	intStr, correct use of extension packets.
	(GdbServer::rspOsDataLoad): Created.
	(GdbServer::rspOsDataTraffic): Created.
	(GdbServer::intStr): Created.
	* src/GdbServer.h: Add osProcessReply, osLoadReply,
	osTrafficReply, rspOsDataLoad, rspOsDataTraffic and intStr.
	* src/TargetControl.h: Add pure virtual getNumRows
	and getNumCols.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::listCoreIds): Return pre-computed vector.
	(TargetControlHardware::getNumRows): Created.
	(TargetControlHardware::getNumCols): Created.
	(TargetControlHardware::initMaps): Clear all maps, sets and
	vectors and member variables for cores, rows and columns. Compute
	number of rows and columns and initialize vector of relative core
	IDs.
	* src/TargetControlHardware.h: Add getNumRows,
	getNumCols, relCoreIds, numRows and numCols.
